# crewai-crw

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/crewai_crw/: __init__.py  tools.py
tests/: test_integration.py  test_tools.py
