[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-crw"
version = "0.2.0"
description = "CRW web scraping tools for CrewAI — scrape, crawl, and map websites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "CRW Project", email = "hello@fastcrw.com" }]
keywords = ["crewai", "crw", "web-scraping", "ai-agents", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "crewai>=0.100.0",
    "crw>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/us/crw"
Documentation = "https://fastcrw.com"
Repository = "https://github.com/us/crewai-crw"
Issues = "https://github.com/us/crewai-crw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crewai_crw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
